src/tests/snapshots/tera__tests__parser__parser_errors@unary_op_after_tilde.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unary_op_after_tilde.txt
---
 Syntax error --> [unary_op_after_tilde.txt:1:12]
  |
1 | {{ "ho" ~ - "hey" }}
  |             ^---
  = `-` is not allowed after `~`
        
